--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
     "js-confetti": "^0.11.0",
     "next": "14.0.1",
     "react": "^18",
